--- a/drivers/net/ethernet/qualcomm/rmnet/Kconfig
+++ b/drivers/net/ethernet/qualcomm/rmnet/Kconfig
@@ -18,3 +18,6 @@ menuconfig RMNET_ARGOS
 	depends on RMNET
 	---help---
 	  argos for rmnet driver
+
+source "drivers/net/ethernet/qualcomm/rmnet/shs/Kconfig"
+source "drivers/net/ethernet/qualcomm/rmnet/perf/Kconfig"
