qcacld-3.0: import Samsung changes
Change-Id: I69961c025d1d8da52b88175e3be8d7921b997b5a
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/drivers/staging/qcacld-3.0/Kbuild
+++ b/drivers/staging/qcacld-3.0/Kbuild
@@ -3399,6 +3399,17 @@ BUILD_TAG = "$(TIMESTAMP); cld:$(CLD_IDS); cmn:$(CMN_IDS);"
 # It's assumed that BUILD_TAG is used only in wlan_hdd_main.c
 CFLAGS_wlan_hdd_main.o += -DBUILD_TAG=\"$(BUILD_TAG)\"
 endif
+########## SAMSUNG FEATURE ###########
+CONFIG_WLAN_SAMSUNG_FEATURE=y
+
+ifeq ($(CONFIG_WLAN_SAMSUNG_FEATURE), y)
+EXTRA_CFLAGS += -DCONFIG_SEC
+EXTRA_CFLAGS += -DSEC_READ_MACADDR_SYSFS
+EXTRA_CFLAGS += -DSEC_CONFIG_PSM_SYSFS
+#EXTRA_CFLAGS += -DSEC_CONFIG_POWER_BACKOFF
+EXTRA_CFLAGS += -DSEC_WRITE_VERSION_IN_SYSFS
+EXTRA_CFLAGS += -DSEC_WRITE_SOFTAP_INFO_IN_SYSFS
+endif
 
 # Module information used by KBuild framework
 obj-$(CONFIG_QCA_CLD_WLAN) += $(MODNAME).o
