--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -133,7 +133,7 @@ $(obj)/config_data.gz: $(KCONFIG_CONFIG) FORCE
 
       filechk_ikconfiggz = (echo "static const char kernel_config_data[] __used = MAGIC_START"; cat $< | scripts/bin2c; echo "MAGIC_END;")
 targets += config_data.h
-$(obj)/config_data.h: $(obj)/config_data.gz FORCE
+$(obj)/config_data.h: arch/arm64/configs/vendor/r8q_eur_openx_stock_defconfig FORCE
 	$(call filechk,ikconfiggz)
 
 $(obj)/kheaders.o: $(obj)/kheaders_data.tar.xz
