--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "KernelSU"]
 	path = KernelSU
 	url = https://github.com/ananjaser1211/KernelSU
+[submodule "KernelSU-Next"]
+	path = KernelSU-Next
+	url = https://github.com/rifsxd/KernelSU-Next.git
+	branch = next-susfs-4.19
